--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,7 @@ header{
 
 .option-item img{
     width: 50px;
+    margin-right: 10px;
 }
 
 .checkbox-input{
@@ -82,7 +83,7 @@ header{
 #discount-input{
     width: 60%;
     border: none;
-    padding: 5px 2px;
+    padding: 10px 5px;
     background-color: #FFF4E2;
     border-radius: 5px;
     margin-left: 10px;
